Fix interactable-text color on noTabScreen not showing

--- a/src/src/index.scss
+++ b/src/src/index.scss
@@ -129,7 +129,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .interactable-text {
-  color: #4682B4;
+  color: #4682B4 !important;
   cursor: pointer;
 }
 
